Logowanie-JWT-wip
Teoretycznie pobiera id klienta z JWT, ale coś się rozwaliło w SecurityConfig w metodzie filterChain, nwm jak to obejść